# Hebrw-ASR

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
hebrewASR/: app.py  dataModule.py  hebrew_asr.py  runner.py
hebrewASR/modules/: ctcDecoder.py  danse.py
hebrewASR/prep/: lm_prep.ipynb  processor.py
hebrewASR/process_data/: model.bin.lm
hebrewASR/report/: Simple_NN.csv  data_explored.ipynb  deep_nn.csv  deep_tune_nn.csv
src/: app.py  dataModule.py  data_loader.py  data_prep.py  dataset.ipynb  deep.py  eval_classifier.ipynb  hebrewASR.py  test.ipynb  test.py
src/download/: download.py  download_local.py
src/model/: configs.py  quartznet.py
src/modules/: bi_rnn.py  convolution.py  ctcDecoder.py
src/prep/: data_prep.py  lm_prep.ipynb  processor.py
src/report/: final.csv  results.ipynb  simple_small.csv
